🐞 fix: neko infomation wrap

--- a/plugins/kbot/src/basic/status/assets/css/neko/style.css
+++ b/plugins/kbot/src/basic/status/assets/css/neko/style.css
@@ -90,6 +90,10 @@
   font-size: 28px;
   font-family: "Gugi";
   color: #b7a89e;
+
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 #background-page .__footer {
